# glossa

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MVP_TASKS.md  README.md  SECURITY.md  index.html  metadata.json  package-lock.json  package.json  release-please-config.json  repomix-output.xml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: generate-release-checksums.mjs
src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: documents.rs  lib.rs  llm.rs  main.rs
src/components/audit/: AuditPanel.tsx  index.ts
src/components/common/: ConfirmDialog.tsx  CopyButton.tsx  Drawer.tsx  ErrorBoundary.tsx  HighlightedText.tsx  MarkdownEditor.tsx  ProcessingLine.tsx  StatusIndicator.tsx  index.ts  markdownEditorUtils.test.ts  markdownEditorUtils.ts
src/components/document/: ConfigDrawer.tsx  DocumentView.tsx  ExportDialog.tsx  ImportPreviewDialog.tsx  InsightsDrawer.tsx  index.ts
src/components/help/: HelpGuide.tsx  index.ts
src/components/layout/: Header.tsx
src/components/pipeline/: CostBadge.tsx  PipelineActions.tsx  PipelineConfig.tsx  ProductionStream.tsx  StageCard.tsx  index.ts
src/components/projects/: ProjectPanel.tsx  SaveProjectDialog.tsx  index.ts
src/components/settings/: ApiKeyInput.tsx  SettingsModal.tsx  index.ts
src/hooks/: useChunkWatchdog.test.ts  useChunkWatchdog.ts  useFocusTrap.test.tsx  useFocusTrap.ts  useGlossaryHighlight.ts  usePipeline.test.ts  usePipeline.ts  useProjectAutosave.test.ts  useProjectAutosave.ts
src/i18n/: en.json  index.ts  it.json
src/models/: catalog.test.ts  catalog.ts
src/services/: dbService.test.ts  dbService.ts  fileService.test.ts  fileService.ts  glossaryService.ts  llmService.ts  markdown.test.ts  markdown.ts  projectService.test.ts  projectService.ts  promptTemplateService.test.ts  promptTemplateService.ts
src/stores/: chunksStore.test.ts  chunksStore.ts  confirmStore.ts  libraryStore.ts  pipelineStore.test.ts  pipelineStore.ts  pricingStore.ts  projectStore.test.ts  projectStore.ts  promptTemplateStore.ts  uiStore.test.ts  uiStore.ts
src/test/: setup.ts
src/utils/: costEstimate.test.ts  costEstimate.ts  documentWorkflow.test.ts  documentWorkflow.ts  footnoteExtractor.test.ts  footnoteExtractor.ts  index.ts  logger.ts  projectSnapshot.ts  retry.test.ts  retry.ts  utils.test.ts
