[package]
name = "glossa"
version = "0.2.2" # x-release-please-version
description = "Multi-stage AI translation pipeline for scholars"
authors = ["Niki Corradetti"]
license = "GPL-3.0-or-later"
repository = "https://github.com/nikazzio/glossa"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "glossa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["sync", "macros"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
pdf-extract = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
